Add a mac profile to run the tests.
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@56064 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5