@@ -222,6 +222,19 @@
         </profile>
 
         <profile>
+            <id>AppleJVM</id>
+            <activation>
+                <property>
+                   <name>java.vm.vendor</name>
+                   <value>Apple Inc.</value>
+                </property>
+            </activation>
+            <properties>
+                <argLine>-Xmx1g -XX:MaxPermSize=256m ${extraArgs}</argLine>
+            </properties>
+        </profile>
+
+        <profile>
             <id>IBM-J9-VM</id>
             <activation>
                 <property>
